force-app/main/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Approach__c</fullName>
        <inlineHelpText>Stance being currently taken with this account. Either a Grow, Protect or undefined</inlineHelpText>
        <label>Account Approach</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grow</fullName>
                </value>
                <value>
                    <fullName>Protect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>For use with integration to SUN &amp; PSA</description>
        <displayFormat>D{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Sanction_Automation_Date__c</fullName>
        <label>Account Sanction Automation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Master_BUs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_1__c</fullName>
        <inlineHelpText>If the address goes over more than one line then please use Address Line 2 and Address Line 3. This formatting will display on any Customer facing documents.</inlineHelpText>
        <label>Billing Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_2__c</fullName>
        <label>Billing Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_3__c</fullName>
        <label>Billing Address Line 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALDERNEY</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOWINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <inlineHelpText>If State is required, please enter as two alphanumeric characters, e.g. GA instead of Georgia</inlineHelpText>
        <label>Billing State/County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_ZIP_Postal_Code__c</fullName>
        <label>Billing ZIP/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Defined_Attribute__c</fullName>
        <label>Business Defined Attribute</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2024 Grad - Gold</fullName>
                </value>
                <value>
                    <fullName>2024 Grad - Platinum</fullName>
                </value>
                <value>
                    <fullName>2024 Grad - Silver</fullName>
                </value>
                <value>
                    <fullName>2024 Managerial &amp; Professional - Gold</fullName>
                </value>
                <value>
                    <fullName>2024 Managerial &amp; Professional - Platinum</fullName>
                </value>
                <value>
                    <fullName>2024 Managerial &amp; Professional - Silver</fullName>
                </value>
                <value>
                    <fullName>2024 Tech - Gold</fullName>
                </value>
                <value>
                    <fullName>2024 Tech - Platinum</fullName>
                </value>
                <value>
                    <fullName>2024 Tech - Silver</fullName>
                </value>
                <value>
                    <fullName>2024 TM Overall - Gold</fullName>
                </value>
                <value>
                    <fullName>2024 TM Overall - Platinum</fullName>
                </value>
                <value>
                    <fullName>2024 TM Overall - Silver</fullName>
                </value>
                <value>
                    <fullName>2024 Volume - Gold</fullName>
                </value>
                <value>
                    <fullName>2024 Volume - Platinum</fullName>
                </value>
                <value>
                    <fullName>2024 Volume - Silver</fullName>
                </value>
                <value>
                    <fullName>2025 - AMS Tier 1 WS</fullName>
                </value>
                <value>
                    <fullName>2025 - BPO</fullName>
                </value>
                <value>
                    <fullName>2025 - Competitor Displacement</fullName>
                </value>
                <value>
                    <fullName>2025 - Smart Interview Professional</fullName>
                </value>
                <value>
                    <fullName>2025 - Talent Mobility</fullName>
                </value>
                <value>
                    <fullName>Fortune 500</fullName>
                </value>
                <value>
                    <fullName>Project Atom</fullName>
                </value>
                <value>
                    <fullName>Project Atom/AMS-NB2-5/4k-8k/Tranche 3</fullName>
                </value>
                <value>
                    <fullName>Project Atom/AMS-NB2-5/8k-13k/Tranche 1</fullName>
                </value>
                <value>
                    <fullName>Project Atom (Mgr. &amp; Prof)</fullName>
                </value>
                <value>
                    <fullName>Project Atom (Volume)</fullName>
                </value>
                <value>
                    <fullName>Sangam</fullName>
                </value>
                <value>
                    <fullName>White Glove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Relationship__c</fullName>
        <inlineHelpText>Current = Client is trading as of January 1 of current year.
Inactive (No Recent Trading) = Client has not traded in the 12 months prior to January 1 of current year.
New Logo (Never Traded) = Client has never traded as of January 1 of current year.</inlineHelpText>
        <label>Account Trading Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Inactive (No Recent Trading)</fullName>
                </value>
                <value>
                    <fullName>New Logo (Never Traded)</fullName>
                    <default>true</default>
                    <label>New Logo (Never Traded)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Centre_Id__c</fullName>
        <description>Fro regional grouping of the same accounts, this field will be populated by the BI team.</description>
        <label>Buying Centre Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_2024_Spend_YTD__c</fullName>
        <inlineHelpText>All Opportunities related to the Account that closed &quot;Won&quot; in 2024 (Close Date is between 1/1/2024 and 31/12/2024)</inlineHelpText>
        <label>Calculated 2024 ACV</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed/Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2024</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2024</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Calculated_2025_Spend_YTD__c</fullName>
        <inlineHelpText>All Opportunities related to the Account that closed &quot;Won&quot; in 2025 (Close Date is between 1/1/2025 and 31/12/2025)</inlineHelpText>
        <label>Calculated 2025 ACV</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed/Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2025</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2025</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commercial_Segmentation__c</fullName>
        <inlineHelpText>Segmentation based on existing client spend and growth potential.</inlineHelpText>
        <label>Commercial Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor/Indirect</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid-market</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                    <isActive>false</isActive>
                    <label>Core</label>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                    <isActive>false</isActive>
                    <label>Emerging</label>
                </value>
                <value>
                    <fullName>Focus</fullName>
                    <isActive>false</isActive>
                    <label>Focus</label>
                </value>
                <value>
                    <fullName>Growth</fullName>
                    <isActive>false</isActive>
                    <label>Growth</label>
                </value>
                <value>
                    <fullName>Key</fullName>
                    <isActive>false</isActive>
                    <label>Key</label>
                </value>
                <value>
                    <fullName>New Logo</fullName>
                    <isActive>false</isActive>
                    <label>New Logo</label>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                    <isActive>false</isActive>
                    <label>Reseller</label>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                    <isActive>false</isActive>
                    <label>Strategic</label>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                    <isActive>false</isActive>
                    <label>Transactional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Logo_Id__c</fullName>
        <label>Company Logo Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Connect_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Connect Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exempt_GST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To exempt gst for India accounts.</description>
        <label>Exempt GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Tax_Related__c</fullName>
        <label>Finance/Tax Related</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Split Invoicing (Italy Only)</fullName>
                </value>
                <value>
                    <fullName>LDC eligible (India Only)</fullName>
                </value>
                <value>
                    <fullName>State Owned Entity (China only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fully_Upgraded_TC_Upgrade_records__c</fullName>
        <label>Fully Upgraded TC Upgrade records</label>
        <summaryFilterItems>
            <field>Talent_Central__c.Site_Upgrade_Progress__c</field>
            <operation>equals</operation>
            <value>Fully upgraded</value>
        </summaryFilterItems>
        <summaryForeignKey>Talent_Central__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GCSC_Account_Owner__c</fullName>
        <description>This field is used to store the email addresses of the GCSC Owned or Customer Connect Accounts</description>
        <label>GCSC/CC Acc Owner (internal use only)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GCSC_Owned_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Accounts with this box ticked are managed by a regional GCSC Customer Experience team</inlineHelpText>
        <label>GCSC Owned Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Billing_Country__c</fullName>
        <description>This is the new field created for making the country value set consistent over all modules in Salesforce.</description>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Country_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_FTEs__c</fullName>
        <label>Global #FTEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Country_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Description__c</fullName>
        <description>This field shows whether any description has been specified for the account or not. This field is read only and is updated by a workflow rule and is meant for determining the Phoenix Status.</description>
        <inlineHelpText>This shows whether any description has been specified for the account or not.</inlineHelpText>
        <label>Has Description</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Recent_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be TRUE if there is Order linked to the Account in the last 18 months, otherwise FALSE.</description>
        <label>Has Recent Orders? (In Last 18 Months)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highest_Employee_Count__c</fullName>
        <description>This field is populated by Conveyor the highest count of Domestic_Employee_Count_c, Employee_Rangec, Employee_Count_Totalc, Employee_Count_This_Sitec, ZI_Employee_Countc. It will prioritise the value, if any for Employee_Range_c, otherwise it’ll be autoamtically populated by the highest values across the other employee fields listed.</description>
        <inlineHelpText>Used to calculate the highest employee count across the customer’s regional hierarchy and define segmentation</inlineHelpText>
        <label>Customer Employee Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoiceMonthly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by MS</inlineHelpText>
        <label>Invoice Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Irish_Account__c</fullName>
        <description>Added for SCS clone work to identify Irish accounts from the IE1 BU before they are moved to UK1 BU.</description>
        <inlineHelpText>Used for any country that doesn’t have a dedicated BU, e.g. Taiwan, Ireland, etc.</inlineHelpText>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCurrencyChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Currency Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Prepaid__c</fullName>
        <description>To help determine if the client must pay up front before any services are delivered.</description>
        <inlineHelpText>Select &quot;Yes&quot; if this Account must pay upfront before any services are delivered else select &quot;No&quot;.</inlineHelpText>
        <label>Is Prepaid</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Repeatable_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Repeatable Business?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_TC_migration_mail_sent_date__c</fullName>
        <description>Backend date used to store the date and time when account is successfully migrated to tc plus</description>
        <label>Last TC+ migration mail sent date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>License_Type_New__c</fullName>
        <label>Licence Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>OPQ</fullName>
                </value>
                <value>
                    <fullName>OPQ EXEMPT</fullName>
                </value>
                <value>
                    <fullName>OPQ GLOBAL</fullName>
                </value>
                <value>
                    <fullName>MAS</fullName>
                </value>
                <value>
                    <fullName>MAS EXEMPT</fullName>
                </value>
                <value>
                    <fullName>MAS GLOBAL</fullName>
                </value>
                <value>
                    <fullName>MySHL License</fullName>
                </value>
                <value>
                    <fullName>MAP</fullName>
                </value>
                <value>
                    <fullName>System Licence Single</fullName>
                </value>
                <value>
                    <fullName>System Licence Multi-user</fullName>
                </value>
                <value>
                    <fullName>UCF</fullName>
                </value>
                <value>
                    <fullName>Bureau Licence</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Integrated_Live_System__c</fullName>
        <description>For Reporting purpose just to capture number of related integrated live system</description>
        <label>No of Integrated Live System</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfContacts__c</fullName>
        <label>Number Of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Account_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is used to define how many Account Plan are currently present on Account.</description>
        <label>Number of Account Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Record_Type__c</fullName>
        <label>Old Record Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Amber_Message__c</fullName>
        <formula>IF(ISPICKVAL(BU__c,&apos;South Africa - ZA1&apos;),
IF(OR(INCLUDES(License_Type_New__c,&apos;OPQ&apos;),INCLUDES(License_Type_New__c,&apos;OPQ UNPAID&apos;),INCLUDES(License_Type_New__c,&apos;OPQ EXEMPT&apos;),INCLUDES(License_Type_New__c,&apos;OPQ GLOBAL&apos;)),&apos;&apos;,&apos;Check Licence&apos; &amp; BR()) &amp; 
IF(Is_Prepaid__c==&apos;No&apos;,&apos;&apos;,&apos;Check PrePaid Status&apos; &amp; BR()) &amp;
IF(ISPICKVAL(CurrencyIsoCode,&apos;ZAR&apos;),&apos;&apos;,&apos;Check Currency&apos; &amp; BR()),
IF(ISBLANK(Sun_Comment__c),&apos;&apos;,&apos;Check Sun Comments&apos; &amp; BR()) &amp; 
IF(Has_Description__c==&apos;No&apos;,&apos;&apos;, &apos;Check Account Description&apos; &amp; BR())) &amp;
IF(AND(ISPICKVAL(BU__c,&apos;UK - UK1&apos;),ISPICKVAL(Irish_Account__c,&apos;Ireland&apos;)),&apos;Account Is Irish&apos; &amp; BR(), &apos;&apos;) &amp; 
IF(PurchaseOrderRequired__c,&apos;&apos;, &apos;Check Purchase Order&apos; &amp; BR()) &amp;
IF(SPN_Member__c,&apos;SPN Account - Check Pricing&apos; &amp; BR(),&apos;&apos;)</formula>
        <label>Phoenix Amber Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Green_Message__c</fullName>
        <formula>IF(ISPICKVAL(BU__c,&apos;South Africa - ZA1&apos;),&apos;Account OK&apos;,
IF(AND(ISPICKVAL(BU__c,&apos;UK - UK1&apos;),PurchaseOrderRequired__c),&apos;No Purchase Order Required&apos; &amp; BR(),&apos;&apos;) &amp; 
IF(ISPICKVAL(Status__c,&apos;Approved&apos;), &apos;Trading with SHL&apos;,&apos;&apos;))</formula>
        <label>Phoenix Green Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indicator__c</fullName>
        <description>This field displays the Phoenix Status in the form of an image.</description>
        <formula>IMAGE( CASE(Phoenix_Status__c,
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;Amber&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;/img/samples/light_green.gif&quot;), &apos;Phoenix Status&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For GCSC use only.</inlineHelpText>
        <label>Trading Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Message__c</fullName>
        <description>This field shows the final message generated by the Phoenix Business Rules as per the following criteria:
If the Red Message is not blank, it shows the Red Message else it checks the Amber Message.
If the Amber Message is not blank, it shows the Amber Message else it shows the Green Message.</description>
        <formula>IF(ISBLANK(Phoenix_Red_Message__c),IF(ISBLANK(Phoenix_Amber_Message__c), Phoenix_Green_Message__c,Phoenix_Amber_Message__c),Phoenix_Red_Message__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For GCSC use only.</inlineHelpText>
        <label>Trading Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Red_Message__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Approved&apos;),&apos;&apos;,&apos;Check Account Status&apos; &amp; BR()) &amp;
IF(AND(ISPICKVAL(BU__c,&apos;UK - UK1&apos;),NOT(ISPICKVAL(Sun_Status__c, &apos;Open&apos;))),&apos;Sun Status Is Not Open&apos; &amp; BR(),&apos;&apos;) &amp;
IF(ISPICKVAL(BU__c,&apos;South Africa - ZA1&apos;),&apos;&apos;, IF(PurchaseOrderRequired__c,&apos;&apos;,&apos;Check Purchase Order&apos; &amp; BR()) &amp; IF(Sun_Shows_Valid_Credit__c,&apos;&apos;,&apos;Check Sun Credit&apos;))</formula>
        <label>Phoenix Red Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <formula>IF(ISBLANK(Phoenix_Red_Message__c),IF(ISBLANK(Phoenix_Amber_Message__c), &apos;Green&apos;,&apos;Amber&apos;),&apos;Red&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phoenix Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Guide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Guide?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field Label changed so that default blank equals PO IS required.  Field name remains same for Sun Integration purposes.  JM 31/3 - default value changed to checked so that default means a PO is not required.</description>
        <inlineHelpText>The default for this field has been changed from April 1 2008.  The default will be checked to indicate a PO is not required.</inlineHelpText>
        <label>Purchase Order NOT Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAD_Strategy__c</fullName>
        <label>RAD Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retain</fullName>
                </value>
                <value>
                    <fullName>Acquire</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Global__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Territory__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC2SUN_Resync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC2SUN: Resync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC2SUN_SfdcVersion__c</fullName>
        <description>The latest version of the SFDC record which has been transferred to Sun. (NOT USED ANYMORE)</description>
        <inlineHelpText>The latest version of the SFDC record which has been transferred to Sun.</inlineHelpText>
        <label>SFDC2SUN: SFDC Version (Legacy)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC2SUN_SyncStatus__c</fullName>
        <description>The current status of the sync between this record in SFDC and Sun.</description>
        <inlineHelpText>The current status of the sync between this record in SFDC and Sun.</inlineHelpText>
        <label>SFDC2SUN: Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Out of Sync</fullName>
                </value>
                <value>
                    <fullName>Ready for Sync</fullName>
                </value>
                <value>
                    <fullName>Synced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC2SUN_TransferStatus__c</fullName>
        <description>The status of the last transfer attempt from SFDC to Sun.</description>
        <inlineHelpText>The status of the last transfer attempt from SFDC to Sun.</inlineHelpText>
        <label>SFDC2SUN: Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Transfer</fullName>
                </value>
                <value>
                    <fullName>Not Transferred</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC2SUN_TransferredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who last transferred the record from SFDC to Sun.</description>
        <inlineHelpText>The user who last transferred the record from SFDC to Sun.</inlineHelpText>
        <label>SFDC2SUN: Transferred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPN_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SHL Partner Network member</description>
        <label>SPN Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Region__c</fullName>
        <description>To define sales team region for each account.</description>
        <label>Sales Team Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Team_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Same_As_The_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same As The Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Line_1__c</fullName>
        <label>Shipping Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>